--- a/client/styles.css
+++ b/client/styles.css
@@ -21,7 +21,7 @@ label {
   /*display: inline-block;*/
   width: 40%;
   padding: 16px 8px;
-  border: 1px solid black;
+  /*border: 1px solid black;*/
   margin: 0 auto;
   margin-right: 10px;
 }
@@ -32,7 +32,7 @@ label {
 
 .main-search-form input {
   font-size: 18px;
-  padding: 4px 8px;
+  padding: 8px 8px;
   border: 1px solid white;
   border-radius: 4px;
 }
@@ -42,14 +42,14 @@ label {
   border: 1px solid black;
   border-radius: 10px;
   background: #fff;
-  padding: 15px 20px;
+  padding: 10px 20px;
   font-size: 18px;
   font-weight: bold;
 }
 
 .main-search-table {
   border-collapse: collapse;
-  width: 100%;
+  /*width: 100%;*/
   font-size: 14px;
   table-layout: fixed;
   background: #fff;
@@ -60,13 +60,30 @@ label {
 .main-search-table td {
   border: 1px solid black;
 }
+.main-search-table th,
+.main-search-table td {
+  padding: 5px 10px;
+}
 
 .main-search-table td {
-  word-wrap: break-word;
   width: 15%;
+  /* These are technically the same, but use both */
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+
+  -ms-word-break: break-all;
+  /* Instead use this non-standard one: */
+  word-break: break-word;
+
+  /* Adds a hyphen where the word breaks, if supported (No Blink) */
+  -ms-hyphens: auto;
+  -moz-hyphens: auto;
+  -webkit-hyphens: auto;
+  hyphens: auto;
 }
 
 .main-search-table td:last-child {
   width: 70%;
+  text-align: left;
 }
 
